# toppra

cpp/: CMakeLists.txt  CMakeLists.txt.in  pyproject.toml
cpp/bindings/: CMakeLists.txt
cpp/rossy_utils/: CMakeLists.txt
cpp/rossy_utils/io/: io_utilities.hpp
cpp/rossy_utils/math/: hermite_curve.cpp  liegroup_utilities.cpp  math_utilities.cpp  minjerk_one_dim.cpp  natural_cubic_splines.hpp  natural_quartic_splines.hpp  natural_vcquartic_splines.hpp  path_paramerization_splines.cpp  pseudo_inverse.cpp
cpp/src/: CMakeLists.txt
cpp/src/toppra/: geometric_path.hpp  topt_solver.cpp  topt_solver.hpp  topt_utils.hpp  trajectory_manager.cpp  trajectory_manager.hpp  user_command.hpp
cpp/src/toppra/geometric_path/: piecewise_poly_path.cpp  piecewise_poly_path.hpp
cpp/tests/: test_parametrizer.cpp
examples/: plot_jerk_limited.py  plot_kinematics.py
toppra/: _CythonUtils.c  interpolator.py  parametrizer.py
toppra/algorithm/: __init__.py  algorithm.py
toppra/algorithm/reachabilitybased/: __init__.py  desired_duration_algorithm.py  jerk_constraint_algorithm.py  reachability_algorithm.py
toppra/constraint/: constraint.py
toppra/solverwrapper/: cy_seidel_solverwrapper.c
toppra3/: CMakeLists.txt  pyproject.toml  setup.py
toppra3/bindings/: python_bindings.cpp  toppra3.hpp
toppra3/rossy_utils/: CMakeLists.txt
toppra3/rossy_utils/general/: clock.hpp
toppra3/rossy_utils/io/: io_utilities.cpp  io_utilities.hpp
toppra3/rossy_utils/math/: hermite_curve.hpp  hermite_quintic_splines.cpp  hermite_quintic_splines.hpp  liegroup_utilities.hpp  linear_interpolator.cpp  linear_interpolator.hpp  low_pass_filter.h  lp_solver.cpp  lp_solver.hpp  math_utilities.cpp  math_utilities.hpp  minjerk_one_dim.hpp  natural_cubic_splines.cpp  natural_quartic_splines.cpp  natural_spline_types.hpp  natural_vcquartic_splines.cpp  path_hermite_splines.cpp  path_hermite_splines.hpp  path_paramerization_splines.cpp  path_paramerization_splines.hpp  pseudo_inverse.hpp  simple_kalman_filter.h
toppra3/src/toppra/: clpwrapper.cpp  clpwrapper.hpp  topt_solver.cpp  topt_solver.hpp  topt_utils.hpp  trajectory_manager.cpp  trajectory_manager.hpp  user_command.hpp
toppra3/src/toppra/clp/: CMakeLists.txt
toppra3/src/toppra/math/: linear_interpolator.cpp  linear_interpolator.hpp  lp_solver.cpp  lp_solver.hpp  math_utilities.cpp  math_utilities.hpp  natural_cubic_splines.cpp  natural_cubic_splines.hpp  path_paramerization_splines.cpp
toppra3/tests/: conftest.py  test_parameterization.cpp  test_parameterization.py  test_topt_solver.py
toppra3/toppra3/: __init__.py
