[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "cmake>=3.15",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "toppra3"
version = "0.1.0"
description = "TOPPRA trajectory optimization library"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "numpy>=1.20",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DCMAKE_POSITION_INDEPENDENT_CODE=ON"]
wheel.packages = ["toppra3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = "pp*"

# Configure environment variables
environment = { CMAKE_ARGS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON" }

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y eigen3-devel",  # For CentOS/RHEL
    # Alternatively for Ubuntu/Debian:
    # "apt-get update && apt-get install -y libeigen3-dev"
]

[tool.cibuildwheel.macos]
before-all = "brew install eigen"

[tool.cibuildwheel.windows]
before-all = "vcpkg install eigen3:x64-windows"
environment = { CMAKE_ARGS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" } 