[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "cmake>=3.15",
    "pybind11>=2.10",
    "pybind11-stubgen",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "toppra3"
version = "0.1.0"
description = "TOPPRA trajectory optimization library"
authors = [
    {name = "Chenna Kautilya", email = "chenna@outlook.com"},
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "numpy>=1.20",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DCMAKE_POSITION_INDEPENDENT_CODE=ON"]
wheel.packages = ["toppra3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.cibuildwheel]
# Only build for Python 3.11 and disable PyPy
build = "cp311-*"
skip = "pp*"

# Configure environment variables
environment = { CMAKE_ARGS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON" }

[tool.cibuildwheel.linux]
before-all = [
    "yum update",
    "yum install -y epel-release",
    "yum install -y eigen3-devel",  # For CentOS/RHEL
    "yum install -y coin-or-Clp-devel",
    # Alternatively for Ubuntu/Debian:
    # "apt-get update && apt-get install -y libeigen3-dev"
    # "apt-get update && apt-get install -y coinor-clp coinor-libclp-dev"
]

[tool.cibuildwheel.macos]
before-all = "brew install eigen"
