[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "cmake>=3.15",
    "pybind11>=2.10",
    "pybind11-stubgen",
    "ninja",
]
build-backend = "scikit_build_core.build"

[project]
name = "toppra3"
version = "0.1.2"
description = "TOPPRA trajectory optimization library"
authors = [
    {name = "Chenna Kautilya", email = "chenna@outlook.com"},
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "numpy>=1.20",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DCMAKE_POSITION_INDEPENDENT_CODE=ON"]
wheel.packages = ["toppra3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.cibuildwheel]
# Only build for Python 3.11 and disable PyPy
build = "cp311-*"
skip = "pp* *-musllinux_*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Configure environment variables
environment = { CMAKE_ARGS="-DCMAKE_POSITION_INDEPENDENT_CODE=ON" }

[tool.cibuildwheel.linux]
before-all = [
    # Install dependencies
    "yum install -y wget sudo",
    # Install Eigen
    "wget https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz",
    "tar -xzf eigen-3.4.0.tar.gz",
    "cd eigen-3.4.0 && mkdir build && cd build && cmake .. && make install",
    # Install Clp
    "wget https://raw.githubusercontent.com/coin-or/coinbrew/master/coinbrew",
    "chmod u+x coinbrew",
    "./coinbrew fetch build Clp@releases/1.17.10 -j 10 -t none -p /usr",
]

[tool.cibuildwheel.macos]
before-all = "brew install eigen clp coinutils"
archs = ["arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET="10.13" }

